feat: add safe dish media and dish management
